tests/tagged_enum_zero_init_no_zero_tag_bad.stderr
tests/tagged_enum_zero_init_no_zero_tag_bad.sl:8:2: error: SL2004: type mismatch
