tests/tagged_enum_zero_init_no_zero_tag_bad.sl
enum E u8 {
	A = 1
	B = 2
}

fn main() {
	var e E
	_ = e
}
